force-app/main/default/objects/Workforce_Numbers_Category__c/Workforce_Numbers_Category__c.object-meta.xml
<CustomObject>
    <label>Workforce Numbers Category</label>
    <nameField>
        <label>Workforce Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Workforce Numbers Category</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>