force-app/main/default/objects/Workforce_Numbers_Category__c/fields/Organisation__c.field-meta.xml
<CustomField>
    <fullName>Organisation__c</fullName>
    <label>Organisation</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Workforce Numbers Category</relationshipLabel>
    <relationshipName>Workforce_Numbers_Category</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>