force-app/main/default/objects/Workforce_Numbers_Category__c/fields/Workforce_Name__c.field-meta.xml
<CustomField>
    <fullName>Workforce_Name__c</fullName>
    <formula>If(CONTAINS($User.Profile_Name__c,&apos;Partner&apos;), 
HYPERLINK(&quot;/partners2/apex/Workforce_Numbers?id=&quot;+Id,Name,&quot;_self&quot;),HYPERLINK(&quot;/apex/Workforce_Numbers?id=&quot; +Id,Name,&quot;_self&quot;))</formula>
    <label>Workforce Name</label>
    <type>Text</type>
</CustomField>